# video-to-slides

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
video_to_slides/: __init__.py
